building the frontend + docs + backend
